fix(frontend): avoid grid background jumping around

--- a/packages/frontend/src/global.css
+++ b/packages/frontend/src/global.css
@@ -3,13 +3,13 @@
 
 @layer utilities {
     .bg-grid-light {
-        @apply bg-center;
+        @apply bg-left-top;
         @apply bg-2 md:bg-4;
         @apply bg-black-squares;
     }
 
     .bg-grid-dark {
-        @apply bg-center;
+        @apply bg-left-top;
         @apply bg-2 md:bg-4;
         @apply bg-white-squares;
     }
